--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.5">
     <link rel="stylesheet" href="style.css" >
     <script src="valami.js"></script>
-    <title>Évszakok</title>
+    <title>Portfólió</title>
 </head>
 <body onload="init()"id = "body">
+
+    <h1 >Portfólió</h1>
+    <P>Ezen az oldalon fogom megjeleníteni a frontend munkáimat!</P>
+    <p style="text-align:center;">1.órai munka(2024.09.05)</p>
+    <p style="text-align: center;">2024szft_proba01</p>
     <div onclick="f('Ősz')">Ősz</div>
     <div onclick="f('tél')">tél</div>
     <div onclick="f('tavasz')">tavasz</div>
