--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
     <h1 >Portfólió</h1>
     <P>Ezen az oldalon fogom megjeleníteni a frontend munkáimat!</P>
     <p style="text-align:center;">1.órai munka(2024.09.05)</p>
-    <p style="text-align: center;">2024szft_proba01</p>
-    <div onclick="f('Ősz')">Ősz</div>
-    <div onclick="f('tél')">tél</div>
-    <div onclick="f('tavasz')">tavasz</div>
-    <div onclick="f('nyár')">nyár</div>
+    <a href="./2024.09.05.Elso_Feladat/index.html" target="_blank">2024szft_proba01</a>
     
 </body>
 </html>
