--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 
     <h1 >Portfólió</h1>
     <P>Ezen az oldalon fogom megjeleníteni a frontend munkáimat!</P>
-    <p style="text-align:center;">1.órai munka(2024.09.05)</p>
-    <a href="./2024.09.05.Elso_Feladat/index.html" target="_blank">2024szft_proba01</a>
+    <p style="text-align:left;">házi feladat</p>
+    <p style="text-align: center;">órai feladat</p>
+    <a href="./2024.09.05.Elso_Feladat/index.html" target="_blank" ><p style="text-align: left;" >2024.09.05</p></a>
+    <a href="./2024.09.11/index.html" target="_blank" ><p style="text-align: center;">2024.09.11</p></a>
+    <a href="./2024.09.11/Bevásárló lista/index.html" target="_blank"><p style="text-align: center;">09.11. órai feladat</p></a>
+    
     
 </body>
 </html>
