--- a/2024.09.11/Bevásárló lista/index.html
+++ b/2024.09.11/Bevásárló lista/index.html
@@ -8,7 +8,7 @@
     <script src="aa.js"></script>
 </head>
 <body>
-    <div>Cica %  </div>
+    <div>Cica % ⇗ Ⅻ 🐷🐒 </div>
     <input min="0" max="100"
      type="text" id="i1" onchange="f(this)">
     <div id="output"></div>
