--- a/index.html
+++ b/index.html
@@ -9,14 +9,28 @@
 </head>
 <body onload="init()"id = "body">
 
-    <h1 >Portfólió</h1>
+    <h1 >Portfólióm</h1>
     <P>Ezen az oldalon fogom megjeleníteni a frontend munkáimat!</P>
-    <p style="text-align:left;">házi feladat</p>
-    <p style="text-align: center;">órai feladat</p>
-    <a href="./2024.09.05.Elso_Feladat/index.html" target="_blank" ><p style="text-align: left;" >2024.09.05</p></a>
-    <a href="./2024.09.11/index.html" target="_blank" ><p style="text-align: center;">2024.09.11</p></a>
-    <a href="./2024.09.11/Bevásárló lista/index.html" target="_blank"><p style="text-align: center;">09.11. órai feladat</p></a>
+    <div id="main">
+        <table>
+            <th>
+                <tr><p style="text-align:left;">házi feladat</p></tr>
+                <tr><a href="./2024.09.05.Elso_Feladat/index.html" target="_blank" ><p style="text-align: left;">2024.09.05</p></a></tr>
+            </th>
+        </table>
+
+        <table>
+            <th>
+                <tr><p style="text-align:left;">órai feladat</p></tr>
+                <tr><a href="./2024.09.11/Bevásárló lista/index.html" target="_blank" ><p style="text-align: left;">2024.09.11</p></a></tr>
+                <tr><a href="./sov02_sveltekit-master/docs/index.html" target="_blank" ><p style="text-align: left;">2024.09.12</p></a></tr>
+            </th>
+
+        </table>
+
+    </div>
     
     
 </body>
+</html>
 </html>
