--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                 <tr><p style="text-align:left;">órai feladat</p></tr>
                 <tr><a href="./2024.09.11/Bevásárló lista/index.html" target="_blank" ><p style="text-align: left;">2024.09.11</p></a></tr>
                 <tr><a href="./sov02_sveltekit-master/docs/index.html" target="_blank" ><p style="text-align: left;">2024.09.12</p></a></tr>
+                <tr><a href="./2024.09.18/Alapdolgok/index.html" target="_blank" ><p style="text-align:left;">2024.09.18</p></a></tr>
+                <tr><a href="./2024.09.18/Számológép/index.html" target="_blank" ><p style="text-align:left;">2024.09.18(szamologep)</p></a></tr>
             </th>
 
         </table>
