--- a/index.html
+++ b/index.html
@@ -14,21 +14,22 @@
     <div id="main">
         <table>
             <th>
-                <tr><p style="text-align:left;">házi feladat</p></tr>
-                <tr><a href="./2024.09.05.Elso_Feladat/index.html" target="_blank" ><p style="text-align: left;">2024.09.05</p></a></tr>
-            </th>
-        </table>
-
-        <table>
-            <th>
                 <tr><p style="text-align:left;">órai feladat</p></tr>
                 <tr><a href="./2024.09.11/Bevásárló lista/index.html" target="_blank" ><p style="text-align: left;">2024.09.11</p></a></tr>
                 <tr><a href="./sov02_sveltekit-master/docs/index.html" target="_blank" ><p style="text-align: left;">2024.09.12</p></a></tr>
                 <tr><a href="./2024.09.18/Alapdolgok/index.html" target="_blank" ><p style="text-align:left;">2024.09.18</p></a></tr>
                 <tr><a href="./2024.09.18/Számológép/index.html" target="_blank" ><p style="text-align:left;">2024.09.18(szamologep)</p></a></tr>
+                <tr><a href="./2024.09.19/promise/index.html" target="_blank" ><p style="text-align:left;">2024.09.19 java modules</p></a></tr>
             </th>
 
         </table>
+        <table>
+            <th>
+                <tr><p style="text-align:left;">házi feladat</p></tr>
+                <tr><a href="./2024.09.05.Elso_Feladat/index.html" target="_blank" ><p style="text-align: left;">2024.09.05</p></a></tr>
+            </th>
+        </table>
+
 
     </div>
     
