--- a/2024.09.11/Bevásárló lista/index.html
+++ b/2024.09.11/Bevásárló lista/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" 
+          content="width=device-width, initial-scale=1.0">
+    <title>Bev lista</title>
     <link rel="stylesheet" href="style.css">
-    <script src="aa.js"></script>
+    <script src="lista.js"></script>
 </head>
 <body>
-    <div>Cica % ⇗ Ⅻ 🐷🐒 </div>
-    <input min="0" max="100"
-     type="text" id="i1" onchange="f(this)">
+    <div>Bevásárló lista (🧷🧈🤲)</div>
+    <input min=0 max=100
+           type="text" id="i1" 
+           onchange="f(this)">
     <div id="output"></div>
-    
 </body>
 </html>
