--- a/2024.09.11/Bevásárló lista/index.html
+++ b/2024.09.11/Bevásárló lista/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, initial-scale=1.0">
     <title>Bev lista</title>
     <link rel="stylesheet" href="style.css">
-    <script src="lista.js"></script>
+    <script src="aa.js"></script>
 </head>
 <body>
     <div>Bevásárló lista (🧷🧈🤲)</div>
