--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <a href="./2024.09.18/Alapdolgok/index.html" target="_blank" >2024.09.18</a><br/>
                 <a href="./2024.09.18/Számológép/index.html" target="_blank" >2024.09.18(szamologep)</a><br/>
                 <a href="./2024.09.19/promise/index.html" target="_blank" >2024.09.19 java modules</a><br/>
+                <a href="./mapgame-master/index.html" target="_blank" >2024.11.06(Virtual map)</a><br/>
         </div>
 
         <div class="tabla">
