--- a/2024.10.03/index.html
+++ b/2024.10.03/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" src="style.css">
-    <script href="game.js"></script>
-    <title></title>
+    <link rel="stylesheet" href="style.css"> 
+    <script src="game.js"></script> 
+    <title>Simple Game</title>
 </head>
 
-<body onload="startgame()">
-    <div >
-        <button onclick="moveup()">UP</button><br><br>
-        <button onclick="moveleft()">LEFT</button>
-        <button onclick="moveright()">RIGHT</button><br><br>
-        <button onclick="movedown()">DOWN</button>
-      </div>
-    
+<body onload="startGame()"> 
+    <div>
+        <button onclick="moveUp()">UP</button><br><br>
+        <button onclick="moveLeft()">LEFT</button>
+        <button onclick="moveRight()">RIGHT</button><br><br>
+        <button onclick="moveDown()">DOWN</button>
+    </div>
 </body>
 </html>
