--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
         <div class="tabla">
             <h2>Saját Projekt feladat</h2>
+                <a href="./Memory-card/index.html" target="_blank">memória kártya játék</a><br/>
             
         </div>
     </div>
