--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <a href="./2024.09.18/Számológép/index.html" target="_blank" >2024.09.18(szamologep)</a><br/>
                 <a href="./2024.09.19/promise/index.html" target="_blank" >2024.09.19 java modules</a><br/>
                 <a href="./2024.10.03/index.html" target="_blank" >2024.10.03</a><br/>
+                <a href="https://szogilevente2002.github.io/BevasarloKosar_svelte-main/" target="_blank">2024.10.10</a>a><br/>
                 <a href="https://szogilevente2002.github.io/Map_Game/" target="_blank" >2024.11.06(Virtual map)</a><br/>
         </div>
 
