--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="tabla">
             <h2>Házi feladat</h2>
-                <a href="./2024.09.05.Elso_Feladat/index.html" target="_blank" >2024.09.05</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.09.05/" target="_blank" >2024.09.05</a><br/>
                 <a href="./2024.09.11/Bevásárló lista/index.html" target="_blank">2024.09.11</a><br/>
         </div>
         <div class="tabla">
