--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
     <div id="main">
         <div class="tabla">
             <h2>Órai feladat</h2>
-                <a href="./2024.09.11/index.html" target="_blank" >2024.09.11</a><br/>
-                <a href="./sov02_sveltekit-master/docs/index.html" target="_blank" >2024.09.12</a><br/>
-                <a href="./2024.09.18/Alapdolgok/index.html" target="_blank" >2024.09.18</a><br/>
-                <a href="./2024.09.18/Számológép/index.html" target="_blank" >2024.09.18(szamologep)</a><br/>
-                <a href="./2024.09.19/promise/index.html" target="_blank" >2024.09.19 java modules</a><br/>
-                <a href="./2024.10.03/index.html" target="_blank" >2024.10.03</a><br/>
-                <a href="https://szogilevente2002.github.io/BevasarloKosar_svelte-main/" target="_blank">2024.10.10</a><br/>
-                <a href="https://szogilevente2002.github.io/Map_Game/" target="_blank" >2024.11.06(Virtual map)</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.09.11/" target="_blank" >2024.09.11</a><br/>
+                <a href=" https://szogilevente2002.github.io/2024.09.12/" target="_blank" >2024.09.12</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.09.18/" target="_blank" >2024.09.18</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.09.18_szamologep/" target="_blank" >2024.09.18(szamologep)</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.09.19/" target="_blank" >2024.09.19 java modules</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.10.03/" target="_blank" >2024.10.03</a><br/>
+                <a href="https://szogilevente2002.github.io/20204.10.10_BevasarloKosar_svelte/" target="_blank">2024.10.10</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.11.06_Map_Game/" target="_blank" >2024.11.06(Virtual map)</a><br/>
         </div>
 
         <div class="tabla">
             <h2>Házi feladat</h2>
                 <a href="https://szogilevente2002.github.io/2024.09.05/" target="_blank" >2024.09.05</a><br/>
-                <a href="./2024.09.11/Bevásárló lista/index.html" target="_blank">2024.09.11</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.09.11_bevasarlo_lista/" target="_blank">2024.09.11</a><br/>
         </div>
         <div class="tabla">
             <h2>Saját Projekt feladat</h2>
-                <a href="./Memory-card/index.html" target="_blank">memória kártya játék</a><br/>
+                <a href="https://szogilevente2002.github.io/Memory_Card/" target="_blank">memória kártya játék</a><br/>
             
         </div>
     </div>
