--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="https://szogilevente2002.github.io/2024.09.19/" target="_blank" >2024.09.19 java modules</a><br/>
                 <a href="https://szogilevente2002.github.io/2024.10.03/" target="_blank" >2024.10.03</a><br/>
                 <a href="https://szogilevente2002.github.io/2024.10.10__BevasarloKosar_svelte/" target="_blank">2024.10.10</a><br/>
-                <a href="https://szogilevente2002.github.io/2024.11.06_Map_Game/" target="_blank" >2024.11.06(Virtual map)</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.11.06__Map_Game/" target="_blank" >2024.11.06(Virtual map)</a><br/>
         </div>
 
         <div class="tabla">
