--- a/projektek.html
+++ b/projektek.html
@@ -41,7 +41,8 @@
             </div>
             <div class="tabla">
                 <h2>Saját projektek</h2>
-                <a href="https://szogilevente2002.github.io/Memory_Card/" target="_blank">Memória kártya játék</a><br />
+                <a href="https://szogilevente2002.github.io/Memory_Card/" target="_blank">Memória kártya játék</a><br/>
+                <a href="https://szogilevente2002.github.io/MotorFrontend/" target="_blank">MotorFrontend</a><br/>
             </div>
         </section>
     </main>
