--- a/kontakt.html
+++ b/kontakt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.5">
     <link rel="stylesheet" href="style.css">
-    <title>Kapcsolat</title>
+    <title>Pórtfólió</title>
 </head>
 
 <body>
