--- a/projektek.html
+++ b/projektek.html
@@ -37,6 +37,7 @@
                 <h2>Házi feladatok</h2>
                 <a href="https://szogilevente2002.github.io/2024.09.05/" target="_blank" >2024.09.05</a><br/>
                 <a href="https://szogilevente2002.github.io/2024.09.11_bevasarlo_lista/" target="_blank">2024.09.11</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.12.05/" target="_blank">2024.12.05</a><br/>
                 
             </div>
             <div class="tabla">
