--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <main>
         <section class="about" style="text-align: center;">
-            <h1>Üdvözöllek A pórtfóliómon!</h1>
+            <h1>Üdvözöllek a Portfóliómon!</h1>
             <p>
-                Szögi Levente vagyok, itt egy Frontend weboldalon találhatod magadat.<br>
+                Szögi Levente vagyok. Itt egy Frontend weboldalon találhatod magadat.<br>
                 Ez a portfólió az eddigi munkáimat és projektjeimet mutatja be.<br>
                 Ezen az oldalon veheted fel majd a kapcsolatot majd velem ha szeretnéd.<br>
             </p>
