--- a/projektek.html
+++ b/projektek.html
@@ -24,20 +24,20 @@
             <div class="tabla">
                 <h2>Órai feladatok</h2>
                 <a href="https://szogilevente2002.github.io/2024.09.11/" target="_blank" >2024.09.11</a><br/>
-                <a href=" https://szogilevente2002.github.io/2024.09.12/" target="_blank" >2024.09.12</a><br/>
-                <a href="https://szogilevente2002.github.io/2024.09.18/" target="_blank" >2024.09.18</a><br/>
-                <a href="https://szogilevente2002.github.io/2024.09.18_szamologep/" target="_blank" >2024.09.18(szamologep)</a><br/>
-                <a href="https://szogilevente2002.github.io/2024.09.19/" target="_blank" >2024.09.19 java modules</a><br/>
-                <a href="https://szogilevente2002.github.io/2024.10.03/" target="_blank" >2024.10.03</a><br/>
-                <a href="https://szogilevente2002.github.io/2024.10.10__BevasarloKosar_svelte/" target="_blank">2024.10.10</a><br/>
-                <a href="https://szogilevente2002.github.io/2024.11.06__Map_Game/" target="_blank" >2024.11.06(Virtual map)</a><br/>
+                <a href=" https://szogilevente2002.github.io/2024.09.12/" target="_blank" >Eredményjelző</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.09.18/" target="_blank" >Űrlap</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.09.18_szamologep/" target="_blank" >Számológép</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.09.19/" target="_blank" >java modules</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.10.03/" target="_blank" >Simple Game</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.10.10__BevasarloKosar_svelte/" target="_blank">Bevásárló kosár</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.11.06__Map_Game/" target="_blank" >Térkép játék</a><br/>
             
             </div>
             <div class="tabla">
                 <h2>Házi feladatok</h2>
-                <a href="https://szogilevente2002.github.io/2024.09.05/" target="_blank" >2024.09.05</a><br/>
-                <a href="https://szogilevente2002.github.io/2024.09.11_bevasarlo_lista/" target="_blank">2024.09.11</a><br/>
-                <a href="https://szogilevente2002.github.io/2024.12.05/" target="_blank">2024.12.05</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.09.05/" target="_blank" >Évszakok</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.09.11_bevasarlo_lista/" target="_blank">Bevasarlo lista</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.12.05/" target="_blank">Pattogó labda</a><br/>
                 
             </div>
             <div class="tabla">
