--- a/projektek.html
+++ b/projektek.html
@@ -23,7 +23,7 @@
             <h1>Projektek</h1>
             <div class="tabla">
                 <h2>Órai feladatok</h2>
-                <a href="https://szogilevente2002.github.io/2024.09.11/" target="_blank" >2024.09.11</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.09.11/" target="_blank" >Órai feladat</a><br/>
                 <a href=" https://szogilevente2002.github.io/2024.09.12/" target="_blank" >Eredményjelző</a><br/>
                 <a href="https://szogilevente2002.github.io/2024.09.18/" target="_blank" >Űrlap</a><br/>
                 <a href="https://szogilevente2002.github.io/2024.09.18_szamologep/" target="_blank" >Számológép</a><br/>
