--- a/projektek.html
+++ b/projektek.html
@@ -36,7 +36,7 @@
             <div class="tabla">
                 <h2>Házi feladatok</h2>
                 <a href="https://szogilevente2002.github.io/2024.09.05/" target="_blank" >Évszakok</a><br/>
-                <a href="https://szogilevente2002.github.io/2024.09.11_bevasarlo_lista/" target="_blank">Bevasarlo lista</a><br/>
+                <a href="https://szogilevente2002.github.io/2024.09.11_bevasarlo_lista/" target="_blank">Bevásárló lista</a><br/>
                 <a href="https://szogilevente2002.github.io/2024.12.05/" target="_blank">Pattogó labda</a><br/>
                 
             </div>
