--- a/projektek.html
+++ b/projektek.html
@@ -38,6 +38,7 @@
                 <a href="https://szogilevente2002.github.io/2024.09.05/" target="_blank" >Évszakok</a><br/>
                 <a href="https://szogilevente2002.github.io/2024.09.11_bevasarlo_lista/" target="_blank">Bevásárló lista</a><br/>
                 <a href="https://szogilevente2002.github.io/2024.12.05/" target="_blank">Pattogó labda</a><br/>
+                <a href="https://szogilevente2002.github.io/TRON/" target="_blank">Tron motoros játék</a><br/>
                 
             </div>
             <div class="tabla">
