--- a/projektek.html
+++ b/projektek.html
@@ -44,6 +44,7 @@
                 <h2>Saját projektek</h2>
                 <a href="https://szogilevente2002.github.io/Memory_Card/" target="_blank">Memória kártya játék</a><br/>
                 <a href="https://szogilevente2002.github.io/MotorFrontend/" target="_blank">MotorFrontend</a><br/>
+                <a href="https://bibliothecamotusimaginibus.netlify.app/" target="_blank">Év Végi projekt</a><br/>
             </div>
         </section>
     </main>
