--- a/projektek.html
+++ b/projektek.html
@@ -30,7 +30,7 @@
                 <a href="https://szogilevente2002.github.io/2024.10.03/" target="_blank" >Simple Game</a><br/>
                 <a href="https://szogilevente2002.github.io/2024.10.10__BevasarloKosar_svelte/" target="_blank">Bevásárló kosár</a><br/>
                 <a href="https://szogilevente2002.github.io/2024.11.06__Map_Game/" target="_blank" >Térkép játék</a><br/>
-                <a href="https://szogilevente2002.github.io/Tologatos_Jatek/" target="_blank">Tologatós Játék (Szőrnyekkel)</a><br>
+                <a href="https://szogilevente2002.github.io/Tologatos_Jatek/" target="_blank">Tologatós Játék (Szőrnyekkel!)</a><br>
             
             </div>
             <div class="tabla">
