--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.5">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Portfólió</title>
 </head>
@@ -11,28 +11,43 @@
     <header>
         <nav class="navbar">
             <ul>
-                <li><a href="index.html" class="active">Rólam</a></li>
-                <li><a href="projektek.html">Projektek</a></li>
+                <li><a href="index.html">Rólam</a></li>
+                <li><a href="projektek.html" class="active">Projektek</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="about" style="text-align: center;">
-            <h1>Üdvözöllek a Portfóliómon!</h1>
-            <p>
-                Szögi Levente vagyok. Itt egy Frontend weboldalon találhatod magadat.<br>
-                Ez a portfólió az eddigi munkáimat és projektjeimet mutatja be.<br>
-            </p>
-            <p>
-                <strong>Készségek:</strong> HTML, CSS, JavaScript, Svelte, Webfejlesztés.
-            </p>
-            <h3>Rólam!</h3>
-            <p>
-                Szoftverfejlesztőként és tesztelőként tanulok a Szegedi SOB-ban.<br>
-                Az itt töltött években kezdtem el ismerkedni a HTML-el,CSS-el és Javascript-el,<br>
-                valamint Svelte-vel és más Frontend programokkal is.<br>
-            </p>
+        <section id="projektek">
+            <h1>Projektek</h1>
+
+            <h2>Órai feladatok</h2>
+            <div class="cards">
+                <a href="https://szogilevente2002.github.io/2024.09.11/" class="card" target="_blank">Órai feladat</a>
+                <a href="https://szogilevente2002.github.io/2024.09.12/" class="card" target="_blank">Eredményjelző</a>
+                <a href="https://szogilevente2002.github.io/2024.09.18/" class="card" target="_blank">Űrlap</a>
+                <a href="https://szogilevente2002.github.io/2024.09.18_szamologep/" class="card" target="_blank">Számológép</a>
+                <a href="https://szogilevente2002.github.io/2024.09.19/" class="card" target="_blank">Java Modules</a>
+                <a href="https://szogilevente2002.github.io/2024.10.03/" class="card" target="_blank">Simple Game</a>
+                <a href="https://szogilevente2002.github.io/2024.10.10__BevasarloKosar_svelte/" class="card" target="_blank">Bevásárló kosár</a>
+                <a href="https://szogilevente2002.github.io/2024.11.06__Map_Game/" class="card" target="_blank">Térkép játék</a>
+                <a href="https://szogilevente2002.github.io/Tologatos_Jatek/" class="card" target="_blank">Tologatós Játék</a>
+            </div>
+
+            <h2>Házi feladatok</h2>
+            <div class="cards">
+                <a href="https://szogilevente2002.github.io/2024.09.05/" class="card" target="_blank">Évszakok</a>
+                <a href="https://szogilevente2002.github.io/2024.09.11_bevasarlo_lista/" class="card" target="_blank">Bevásárló lista</a>
+                <a href="https://szogilevente2002.github.io/2024.12.05/" class="card" target="_blank">Pattogó labda</a>
+                <a href="https://szogilevente2002.github.io/TRON/" class="card" target="_blank">Tron motoros játék</a>
+            </div>
+
+            <h2>Saját projektek</h2>
+            <div class="cards">
+                <a href="https://szogilevente2002.github.io/Memory_Card/" class="card" target="_blank">Memória kártya játék</a>
+                <a href="https://szogilevente2002.github.io/MotorFrontend/" class="card" target="_blank">MotorFrontend</a>
+                <a href="https://bibliothecamotusimaginibus.netlify.app/" class="card" target="_blank">Év végi projekt</a>
+            </div>
         </section>
     </main>
 </body>
