--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.5">
     <link rel="stylesheet" href="style.css">
     <title>Portfólió</title>
 </head>
@@ -11,43 +11,29 @@
     <header>
         <nav class="navbar">
             <ul>
-                <li><a href="index.html">Rólam</a></li>
-                <li><a href="projektek.html" class="active">Projektek</a></li>
+                <li><a href="index.html" class="active">Rólam</a></li>
+                <li><a href="projektek.html">Projektek</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section id="projektek">
-            <h1>Projektek</h1>
-
-            <h2>Órai feladatok</h2>
-            <div class="cards">
-                <a href="https://szogilevente2002.github.io/2024.09.11/" class="card" target="_blank">Órai feladat</a>
-                <a href="https://szogilevente2002.github.io/2024.09.12/" class="card" target="_blank">Eredményjelző</a>
-                <a href="https://szogilevente2002.github.io/2024.09.18/" class="card" target="_blank">Űrlap</a>
-                <a href="https://szogilevente2002.github.io/2024.09.18_szamologep/" class="card" target="_blank">Számológép</a>
-                <a href="https://szogilevente2002.github.io/2024.09.19/" class="card" target="_blank">Java Modules</a>
-                <a href="https://szogilevente2002.github.io/2024.10.03/" class="card" target="_blank">Simple Game</a>
-                <a href="https://szogilevente2002.github.io/2024.10.10__BevasarloKosar_svelte/" class="card" target="_blank">Bevásárló kosár</a>
-                <a href="https://szogilevente2002.github.io/2024.11.06__Map_Game/" class="card" target="_blank">Térkép játék</a>
-                <a href="https://szogilevente2002.github.io/Tologatos_Jatek/" class="card" target="_blank">Tologatós Játék</a>
-            </div>
-
-            <h2>Házi feladatok</h2>
-            <div class="cards">
-                <a href="https://szogilevente2002.github.io/2024.09.05/" class="card" target="_blank">Évszakok</a>
-                <a href="https://szogilevente2002.github.io/2024.09.11_bevasarlo_lista/" class="card" target="_blank">Bevásárló lista</a>
-                <a href="https://szogilevente2002.github.io/2024.12.05/" class="card" target="_blank">Pattogó labda</a>
-                <a href="https://szogilevente2002.github.io/TRON/" class="card" target="_blank">Tron motoros játék</a>
-            </div>
-
-            <h2>Saját projektek</h2>
-            <div class="cards">
-                <a href="https://szogilevente2002.github.io/Memory_Card/" class="card" target="_blank">Memória kártya játék</a>
-                <a href="https://szogilevente2002.github.io/MotorFrontend/" class="card" target="_blank">MotorFrontend</a>
-                <a href="https://bibliothecamotusimaginibus.netlify.app/" class="card" target="_blank">Év végi projekt</a>
-            </div>
+        <section class="about" style="text-align: center;">
+            <h1>Üdvözöllek a portfóliómban!</h1>
+            <p>
+                Szögi Levente vagyok, frontend fejlesztéssel foglalkozom.<br>
+                Ez a weboldal bemutatja az eddigi munkáimat, projektjeimet és a megszerzett tudásomat.<br>
+            </p>
+            <p>
+                <strong>Főbb készségeim:</strong> HTML, CSS, JavaScript, Svelte, webfejlesztési ismeretek.
+            </p>
+            <h3>Rólam röviden</h3>
+            <p>
+                Jelenleg a Szegedi Szakképzési Centrum Vasvári Pál Gazdasági Technikumban (SOB) tanulok<br>
+                szoftverfejlesztő és -tesztelő szakon. Tanulmányaim során kezdtem el mélyebben foglalkozni<br>
+                a frontend technológiákkal, mint a HTML, CSS, JavaScript, valamint a modern keretrendszerek, például a Svelte.<br>
+                Szenvedélyem az igényes és hatékony weboldalak készítése.
+            </p>
         </section>
     </main>
 </body>
