--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </p>
             <h3>Rólam röviden</h3>
             <p>
-                Jelenleg a Szegedi Szakképzési Centrum Vasvári Pál Gazdasági Technikumban (SOB) tanulok<br>
+                Jelenleg a Szegedi Szakképzési Centrum Pannonhalmi  Főapátság Szegedi SOB  Technikumában tanulok<br>
                 szoftverfejlesztő és -tesztelő szakon. Tanulmányaim során kezdtem el mélyebben foglalkozni<br>
                 a frontend technológiákkal, mint a HTML, CSS, JavaScript, valamint a modern keretrendszerek, például a Svelte.<br>
                 Szenvedélyem az igényes és hatékony weboldalak készítése.
