--- a/projektek.html
+++ b/projektek.html
@@ -2,7 +2,7 @@
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.5">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Portfólió</title>
 </head>
@@ -20,32 +20,33 @@
     <main>
         <section id="projektek">
             <h1>Projektek</h1>
-            <div class="tabla">
-                <h2>Órai feladatok</h2>
-                <a href="https://szogilevente2002.github.io/2024.09.11/" target="_blank" >Órai feladat</a><br/>
-                <a href=" https://szogilevente2002.github.io/2024.09.12/" target="_blank" >Eredményjelző</a><br/>
-                <a href="https://szogilevente2002.github.io/2024.09.18/" target="_blank" >Űrlap</a><br/>
-                <a href="https://szogilevente2002.github.io/2024.09.18_szamologep/" target="_blank" >Számológép</a><br/>
-                <a href="https://szogilevente2002.github.io/2024.09.19/" target="_blank" >java modules</a><br/>
-                <a href="https://szogilevente2002.github.io/2024.10.03/" target="_blank" >Simple Game</a><br/>
-                <a href="https://szogilevente2002.github.io/2024.10.10__BevasarloKosar_svelte/" target="_blank">Bevásárló kosár</a><br/>
-                <a href="https://szogilevente2002.github.io/2024.11.06__Map_Game/" target="_blank" >Térkép játék</a><br/>
-                <a href="https://szogilevente2002.github.io/Tologatos_Jatek/" target="_blank">Tologatós Játék (Szőrnyekkel!)</a><br>
-            
+
+            <h2>Órai feladatok</h2>
+            <div class="cards">
+                <a href="https://szogilevente2002.github.io/2024.09.11/" class="card" target="_blank">Órai feladat</a>
+                <a href="https://szogilevente2002.github.io/2024.09.12/" class="card" target="_blank">Eredményjelző</a>
+                <a href="https://szogilevente2002.github.io/2024.09.18/" class="card" target="_blank">Űrlap</a>
+                <a href="https://szogilevente2002.github.io/2024.09.18_szamologep/" class="card" target="_blank">Számológép</a>
+                <a href="https://szogilevente2002.github.io/2024.09.19/" class="card" target="_blank">Java Modules</a>
+                <a href="https://szogilevente2002.github.io/2024.10.03/" class="card" target="_blank">Simple Game</a>
+                <a href="https://szogilevente2002.github.io/2024.10.10__BevasarloKosar_svelte/" class="card" target="_blank">Bevásárló kosár</a>
+                <a href="https://szogilevente2002.github.io/2024.11.06__Map_Game/" class="card" target="_blank">Térkép játék</a>
+                <a href="https://szogilevente2002.github.io/Tologatos_Jatek/" class="card" target="_blank">Tologatós Játék(Szőrnyekkel!)</a>
             </div>
-            <div class="tabla">
-                <h2>Házi feladatok</h2>
-                <a href="https://szogilevente2002.github.io/2024.09.05/" target="_blank" >Évszakok</a><br/>
-                <a href="https://szogilevente2002.github.io/2024.09.11_bevasarlo_lista/" target="_blank">Bevásárló lista</a><br/>
-                <a href="https://szogilevente2002.github.io/2024.12.05/" target="_blank">Pattogó labda</a><br/>
-                <a href="https://szogilevente2002.github.io/TRON/" target="_blank">Tron motoros játék</a><br/>
-                
+
+            <h2>Házi feladatok</h2>
+            <div class="cards">
+                <a href="https://szogilevente2002.github.io/2024.09.05/" class="card" target="_blank">Évszakok</a>
+                <a href="https://szogilevente2002.github.io/2024.09.11_bevasarlo_lista/" class="card" target="_blank">Bevásárló lista</a>
+                <a href="https://szogilevente2002.github.io/2024.12.05/" class="card" target="_blank">Pattogó labda</a>
+                <a href="https://szogilevente2002.github.io/TRON/" class="card" target="_blank">Tron motoros játék</a>
             </div>
-            <div class="tabla">
-                <h2>Saját projektek</h2>
-                <a href="https://szogilevente2002.github.io/Memory_Card/" target="_blank">Memória kártya játék</a><br/>
-                <a href="https://szogilevente2002.github.io/MotorFrontend/" target="_blank">MotorFrontend</a><br/>
-                <a href="https://bibliothecamotusimaginibus.netlify.app/" target="_blank">Év Végi projekt</a><br/>
+
+            <h2>Saját projektek</h2>
+            <div class="cards">
+                <a href="https://szogilevente2002.github.io/Memory_Card/" class="card" target="_blank">Memória kártya játék</a>
+                <a href="https://szogilevente2002.github.io/MotorFrontend/" class="card" target="_blank">MotorFrontend</a>
+                <a href="https://bibliothecamotusimaginibus.netlify.app/" class="card" target="_blank">Év végi projekt</a>
             </div>
         </section>
     </main>
