--- a/projektek.html
+++ b/projektek.html
@@ -1,54 +1,97 @@
-<!DOCTYPE html>
-<html lang="hu">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Portfólió</title>
-</head>
+<main>
+    <section id="projektek">
+        <h1>Projektek</h1>
 
-<body>
-    <header>
-        <nav class="navbar">
-            <ul>
-                <li><a href="index.html">Rólam</a></li>
-                <li><a href="projektek.html" class="active">Projektek</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section id="projektek">
-            <h1>Projektek</h1>
-
-            <h2>Órai feladatok</h2>
-            <div class="cards">
-                <a href="https://szogilevente2002.github.io/2024.09.11/" class="card" target="_blank">Órai feladat</a>
-                <a href="https://szogilevente2002.github.io/2024.09.12/" class="card" target="_blank">Eredményjelző</a>
-                <a href="https://szogilevente2002.github.io/2024.09.18/" class="card" target="_blank">Űrlap</a>
-                <a href="https://szogilevente2002.github.io/2024.09.18_szamologep/" class="card" target="_blank">Számológép</a>
-                <a href="https://szogilevente2002.github.io/2024.09.19/" class="card" target="_blank">Java Modules</a>
-                <a href="https://szogilevente2002.github.io/2024.10.03/" class="card" target="_blank">Simple Game</a>
-                <a href="https://szogilevente2002.github.io/2024.10.10__BevasarloKosar_svelte/" class="card" target="_blank">Bevásárló kosár</a>
-                <a href="https://szogilevente2002.github.io/2024.11.06__Map_Game/" class="card" target="_blank">Térkép játék</a>
-                <a href="https://szogilevente2002.github.io/Tologatos_Jatek/" class="card" target="_blank">Tologatós Játék(Szőrnyekkel!)</a>
+        <h2>Órai feladatok</h2>
+        <div class="cards">
+            <div class="card">
+                <h3>📅 Órai feladat</h3>
+                <p>Első próbálkozások HTML és CSS használatával.</p>
+                <a href="https://szogilevente2002.github.io/2024.09.11/" target="_blank">Megnyitás</a>
             </div>
-
-            <h2>Házi feladatok</h2>
-            <div class="cards">
-                <a href="https://szogilevente2002.github.io/2024.09.05/" class="card" target="_blank">Évszakok</a>
-                <a href="https://szogilevente2002.github.io/2024.09.11_bevasarlo_lista/" class="card" target="_blank">Bevásárló lista</a>
-                <a href="https://szogilevente2002.github.io/2024.12.05/" class="card" target="_blank">Pattogó labda</a>
-                <a href="https://szogilevente2002.github.io/TRON/" class="card" target="_blank">Tron motoros játék</a>
+            <div class="card">
+                <h3>🏆 Eredményjelző</h3>
+                <p>Egyszerű pontszám-kijelző interaktív gombokkal.</p>
+                <a href="https://szogilevente2002.github.io/2024.09.12/" target="_blank">Megnyitás</a>
             </div>
-
-            <h2>Saját projektek</h2>
-            <div class="cards">
-                <a href="https://szogilevente2002.github.io/Memory_Card/" class="card" target="_blank">Memória kártya játék</a>
-                <a href="https://szogilevente2002.github.io/MotorFrontend/" class="card" target="_blank">MotorFrontend</a>
-                <a href="https://bibliothecamotusimaginibus.netlify.app/" class="card" target="_blank">Év végi projekt</a>
+            <div class="card">
+                <h3>📝 Űrlap</h3>
+                <p>Felhasználói űrlap HTML5 elemekkel és stílusokkal.</p>
+                <a href="https://szogilevente2002.github.io/2024.09.18/" target="_blank">Megnyitás</a>
             </div>
-        </section>
-    </main>
-</body>
-</html>
+            <div class="card">
+                <h3>🧮 Számológép</h3>
+                <p>Alapműveleteket végző JavaScript alapú kalkulátor.</p>
+                <a href="https://szogilevente2002.github.io/2024.09.18_szamologep/" target="_blank">Megnyitás</a>
+            </div>
+            <div class="card">
+                <h3>📦 Java Modules</h3>
+                <p>Moduláris felépítés kipróbálása JavaScript-ben.</p>
+                <a href="https://szogilevente2002.github.io/2024.09.19/" target="_blank">Megnyitás</a>
+            </div>
+            <div class="card">
+                <h3>🎮 Simple Game</h3>
+                <p>Egyszerű játék, ami bemutatja az eseménykezelést.</p>
+                <a href="https://szogilevente2002.github.io/2024.10.03/" target="_blank">Megnyitás</a>
+            </div>
+            <div class="card">
+                <h3>🛒 Bevásárló kosár</h3>
+                <p>Svelte alapú interaktív kosár funkcióval.</p>
+                <a href="https://szogilevente2002.github.io/2024.10.10__BevasarloKosar_svelte/" target="_blank">Megnyitás</a>
+            </div>
+            <div class="card">
+                <h3>🗺️ Térkép játék</h3>
+                <p>Kattintható térkép, játékos funkciókkal és pontszámítással.</p>
+                <a href="https://szogilevente2002.github.io/2024.11.06__Map_Game/" target="_blank">Megnyitás</a>
+            </div>
+            <div class="card">
+                <h3>👾 Tologatós Játék</h3>
+                <p>Szőrnyes játékmenet, pályán tologatható objektumokkal.</p>
+                <a href="https://szogilevente2002.github.io/Tologatos_Jatek/" target="_blank">Megnyitás</a>
+            </div>
+        </div>
+
+        <h2>Házi feladatok</h2>
+        <div class="cards">
+            <div class="card">
+                <h3>🌦️ Évszakok</h3>
+                <p>Évszakhoz kapcsolódó stílusváltások és interakciók.</p>
+                <a href="https://szogilevente2002.github.io/2024.09.05/" target="_blank">Megnyitás</a>
+            </div>
+            <div class="card">
+                <h3>🛍️ Bevásárló lista</h3>
+                <p>Lista hozzáadása és törlése gombnyomással.</p>
+                <a href="https://szogilevente2002.github.io/2024.09.11_bevasarlo_lista/" target="_blank">Megnyitás</a>
+            </div>
+            <div class="card">
+                <h3>🏐 Pattogó labda</h3>
+                <p>Canvas alapú animáció mozgó objektummal.</p>
+                <a href="https://szogilevente2002.github.io/2024.12.05/" target="_blank">Megnyitás</a>
+            </div>
+            <div class="card">
+                <h3>🚀 Tron motoros játék</h3>
+                <p>Kétjátékos motoros játék, Tron stílusban.</p>
+                <a href="https://szogilevente2002.github.io/TRON/" target="_blank">Megnyitás</a>
+            </div>
+        </div>
+
+        <h2>Saját projektek</h2>
+        <div class="cards">
+            <div class="card">
+                <h3>🧠 Memória kártya játék</h3>
+                <p>Párosító játék véletlenszerűen elrendezett kártyákkal.</p>
+                <a href="https://szogilevente2002.github.io/Memory_Card/" target="_blank">Megnyitás</a>
+            </div>
+            <div class="card">
+                <h3>🏍️ MotorFrontend</h3>
+                <p>Webes frontend motorkerékpár termékoldalhoz.</p>
+                <a href="https://szogilevente2002.github.io/MotorFrontend/" target="_blank">Megnyitás</a>
+            </div>
+            <div class="card">
+                <h3>📚 Év végi projekt</h3>
+                <p>Személyes projekt: mozgóképes digitális könyvtár frontendje.</p>
+                <a href="https://bibliothecamotusimaginibus.netlify.app/" target="_blank">Megnyitás</a>
+            </div>
+        </div>
+    </section>
+</main>
