--- a/projektek.html
+++ b/projektek.html
@@ -68,6 +68,12 @@
                     <a href="https://szogilevente2002.github.io/Tologatos_Jatek/" target="_blank">Megnyitás</a>
                 </div>
             </div>
+            <div class="card">
+                    <h3> 📅 Naptár</h3>
+                    <p>Naptár heti és havi nézettel.</p>
+                    <a href="https://naptar.netlify.app/" target="_blank">Megnyitás</a>
+                </div>
+            </div>
 
             <h2>📚 Házi feladatok</h2>
             <div class="cards">
